# soufi

./: .gitignore  .stestr.conf  ChangeLog  HACKING.rst  Jenkinsfile  Jenkinsfile-onmerge  Jenkinsfile-ontag  MANIFEST  MANIFEST.in  README.md  README.rst  RELEASING.txt  build.vars  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: tests.yml
build-conf/ubuntu/: 01-install-deps
requirements/: requirements-bootstrap.txt  requirements-cli.txt  requirements-test.txt  requirements.txt
sofi/: __init__.py  exceptions.py  finder.py
sofi/finders/: alpine.py  centos.py  debian.py  golang.py  java.py  npm.py  python.py  ubuntu.py
sofi/testing/: base.py  factory.py
sofi/tests/: test_factory.py  test_finder_base.py
sofi/tests/finders/: test_alpine_finder.py  test_centos_finder.py  test_debian_finder.py  test_golang_finder.py  test_java_finder.py  test_npm_finder.py  test_python_finder.py  test_ubuntu_finder.py
soufi/: __init__.py  cli.py  exceptions.py  finder.py  history_cli.py
soufi/finders/: alma.py  alpine.py  centos.py  crate.py  debian.py  gem.py  golang.py  java.py  npm.py  photon.py  php_composer.py  php_pecl.py  python.py  rhel.py  ubuntu.py  yum.py
soufi/functional/: test_functional.py
soufi/testing/: base.py
soufi/testing/data/phpcomposer/: monolog.json
soufi/tests/: test_cli.py  test_factory.py  test_finder_base.py  test_history_cli.py
soufi/tests/finders/: test_alma_finder.py  test_alpine_finder.py  test_centos_finder.py  test_crate_finder.py  test_debian_finder.py  test_gem_finder.py  test_golang_finder.py  test_java_finder.py  test_npm_finder.py  test_photon_finder.py  test_phpcomposer_finder.py  test_python_finder.py  test_rhel_finder.py  test_ubuntu_finder.py  test_yum_finder.py
soufi/tests/functional/: test_functional.py
tools/: compile-requirements  functions  runner
vars/: buildUtils.groovy
