[tool.black]
line-length = 79
target_version = ['py36']
skip-string-normalization = 1
# Needed for the vim plugin
string-normalization = 0
exclude = '''
(
    /(
          \.eggs
        | \.git
        | .tox
        | \.venv
        | dist
        | build
        | _build
        | soufi-venv
    )/
    | soufi/_version.py
)
'''

[tool.coverage.run]
omit = [
    '*soufi/tests*',
    '*soufi/testing*',
    '*soufi/functional*',
    'soufi/__init__.py',
    'soufi/_version.py',
]

[tool.isort]
line_length = 79
multi_line_output = 3
indent='    '
include_trailing_comma = true
use_parentheses = true

[build-system]
# If 'requires' is changed, update the same in setup.py.
requires = [
    "setuptools>=60.5.0",
    "wheel",
    "setuptools-scm>=6.4.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "soufi/_version.py"
