[metadata]
name = soufi
summary = Source Finder
description = "Source finder CLI and API"
long_description = file: README.rst LICENCE
license = Apache2.0
python_requires = >=3.7
maintainer = Julian Edwards
maintainer_email = juledwar@cisco.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
    Topic :: Utilities

[files]
packages =
    soufi

[entry_points]
console_scripts =
    soufi = soufi:main

[bdist_wheel]
universal = 1

[pbr]
skip_git_sdist = 1
