[metadata]
name = soufi
url = https://github.com/juledwar/soufi
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache2.0
python_requires = >=3.7
maintainer = Julian Edwards
maintainer_email = juledwar@cisco.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = soufi
zip_safe = False
include_package_data = True
install_requires =
    click>=7.1.2
    cryptography>=3.3.1
    launchpadlib>=1.10.13
    repomd>=0.2.1
    requests>=2.25.1
    requests-oauthlib>=1.3.0
    lxml>=4.6.3
    dogpile.cache>=1.1.5
    pylru>=1.2.0

[entry_points]
console_scripts =
    soufi = soufi:main

[bdist_wheel]
universal = 1
